// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does exist when valid inputs passed performs correctly 1`] = `
Ok {
  "value": Object {
    "id": "d686952",
    "jobId": "04D2AB5A08",
    "rateLimit": Object {
      "bucket": "workable",
      "remainingRequests": 3,
      "remainingRequestsPercentage": 30,
      "resetTimestamp": 1672831487,
      "totalRequests": 10,
    },
  },
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID NOT-EXISTING. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[4].statements[0]
Original Map Location: Line 20, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified subdomain does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get subdomain by name invalid-superface. Check that the subdomain with that name exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[3].statements[0]
Original Map Location: Line 13, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidateFeatures returns valid workable features 1`] = `
Ok {
  "value": Object {
    "cvMIMETypes": Array [
      "application/pdf",
      "text/rtf",
      "application/msword",
      "application/vnd.openxmlformats-officedocument.custom-properties+xml",
    ],
    "cvUploadMethods": Array [
      "url",
      "file",
    ],
  },
}
`;
